# my-std-variadic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: map.cpp  vector.cpp
inc/: comparators.hpp  concepts.hpp  fwd.hpp  map.hpp  traits.hpp  tuple.hpp  tuple_utils.hpp  variant.hpp  vector.hpp
motivations/: map.md
tests/: comparators.cpp  drop_logger.hpp  fwd.cpp  map.cpp  traits.cpp  tuple.cpp  tuple_utils.cpp  variant.cpp  vector.cpp
